--- a/hybrid_simulation_configuration_drift_ancestral_seq_example.cfg
+++ b/hybrid_simulation_configuration_drift_ancestral_seq_example.cfg
@@ -1,11 +1,11 @@
-genome1=
+genome1=group11_only_par1.fa
 genome2=
-use_ancestral=0
+use_ancestral=1
 mixture_prop_par1=0.5
-rec_rate_Morgans_kb=0.00004
+rec_rate_Morgans_kb=0.00002
 num_indivs=50
 gens_since_admixture=50
-chr_to_simulate=
+chr_to_simulate=group11
 poly_perbp_par1=0.001
 poly_perbp_par2=0.001
 rate_shared_poly_at_aims=0.01
@@ -14,18 +14,18 @@ read_length=100
 per_bp_indels=0.006
 sequencing_error=0.005
 number_reads=100000
-parental_drift=0
-macs_par1_aims_pop=
-macs_par2_aims_pop=
-aim_freq_cutoff=0.95
+parental_drift=1
+macs_par1_aims_pop=3
+macs_par2_aims_pop=4
+aim_freq_cutoff=0.9
 job_submit_cmd=sbatch
 use_macs=1
 use_map=1
 SELAM_param_file=
-macs_params=60 10000000 -I 2 30 30 0 -t 0.001 -h 1e2 -r 0.001 -ej 2 2 1 -R recombination_map_for_macs.txt
+macs_params=80 27029826 -I 4 20 20 20 20 0 -t 0.001 -h 1e2 -r 0.001  -ej 0.05 4 1 -ej 0.06 3 2 -ej 2 2 1 -R recombination_map_for_macs.txt
 program_path=/scratch/groups/schumer/molly/Simulate_Ancestry_HMM/Simulate_hybrid_genomes
 par1_for_aims=20
 par2_for_aims=20
 seq_params=
 job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=64000 #SBATCH -p schumer #SBATCH --time=02:00:00
-num_indiv_per_job=2
+num_indiv_per_job=1
