--- a/hybrid_simulation_configuration_ancestral_seq_example.cfg
+++ b/hybrid_simulation_configuration_ancestral_seq_example.cfg
@@ -13,21 +13,21 @@ read_type=PE
 read_length=100
 per_bp_indels=0.006
 sequencing_error=0.005
-number_reads=100000
+number_reads=25000
 cross_contam=
-parental_drift=1
-macs_par1_aims_pop=3
-macs_par2_aims_pop=4
+parental_drift=0
+macs_par1_aims_pop=
+macs_par2_aims_pop=
 aim_freq_cutoff=0.95
 job_submit_cmd=sbatch
 use_macs=1
 use_map=1
 SELAM_param_file=
 SELAM_selection_file=
-macs_params=80 10000000 -I 4 20 20 20 20 0 -t 0.001 -h 1e2 -r 0.001  -ej 0.05 3 1 -ej 0.051 4 2 -ej 2 2 1 -R recombination_map_for_macs.txt
+macs_params=200 10000000 -I 2 100 100 0 -t 0.001 -h 1e2 -r 0.001 -ej 2 2 1 -R recombination_map_for_macs_section.txt
 program_path=/scratch/groups/schumer/molly/Simulate_Ancestry_HMM/Simulate_hybrid_genomes
 par1_for_aims=20
 par2_for_aims=20
 seq_params=
 job_header=#!/bin/sh #SBATCH --ntasks=1 #SBATCH --cpus-per-task=1 --mem=64000 #SBATCH -p schumer #SBATCH --time=02:00:00
-num_indiv_per_job=1
+num_indiv_per_job=2
