--- a/hybrid_simulation_configuration_ancestral_seq_example_nonparallel.cfg
+++ b/hybrid_simulation_configuration_ancestral_seq_example_nonparallel.cfg
@@ -25,7 +25,7 @@ use_map=0
 SELAM_param_file=
 SELAM_selection_file=
 macs_params=200 10000000 -I 2 100 100 0 -t 0.001 -h 1e2 -r 0.001 -ej 2 2 1 -R recombination_map_for_macs_section.txt
-program_path=/Users/mollyschumer/mixnmatch
+program_path=./mixnmatch
 par1_for_aims=20
 par2_for_aims=20
 seq_params=
