--- a/hybrid_simulation_configuration_ancestral_seq_example_parallel.cfg
+++ b/hybrid_simulation_configuration_ancestral_seq_example_parallel.cfg
@@ -3,7 +3,7 @@ genome2=
 use_ancestral=1
 mixture_prop_par1=0.5
 rec_rate_Morgans_kb=0.00002
-num_indivs=5
+num_indivs=50
 gens_since_admixture=50
 chr_to_simulate=group1
 poly_perbp_par1=0.001
@@ -25,7 +25,7 @@ use_map=0
 SELAM_param_file=
 SELAM_selection_file=
 macs_params=200 10000000 -I 2 100 100 0 -t 0.001 -h 1e2 -r 0.001 -ej 2 2 1 -R recombination_map_for_macs_section.txt
-program_path=/Users/mollyschumer/mixnmatch
+program_path=./
 par1_for_aims=20
 par2_for_aims=20
 seq_params=
